# chip8-emulator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/chip8/: __init__.py  cli.py  constants.py  core.py  display.py  handlers.py  keypad.py  renderer.py
